--- a/lunas.html
+++ b/lunas.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="relative flex h-auto min-h-screen w-full flex-col bg-[#f9f8fb] group/design-root overflow-x-hidden" style='font-family: Manrope, "Noto Sans", sans-serif;'>
-        <div class="flex-1 pb-20">
+        <div class="flex-1">
             <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
                 <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Tagihan</h2>
             </header>
@@ -49,7 +49,7 @@
                 </label>
             </div>
             
-            <div id="invoice-list" class="flex-1 overflow-y-auto max-h-[calc(100vh-280px)] pb-32">
+            <div id="invoice-list">
                 </div>
         </div>
       
