--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -142,13 +142,13 @@
                     </div>
                     <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
                 </a>
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#110e1b]" href="pelanggan_info.html">
-                    <div class="text-[#110e1b] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#5324e0]" href="pelanggan_info.html">
+                    <div class="text-[#5324e0] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,16V88H32V64Zm0,128H32V104H224v88Zm-16-24a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h32A8,8,0,0,1,208,168Zm-64,0a8,8,0,0,1-8,8H120a8,8,0,0,1,0-16h16A8,8,0,0,1,144,168Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
+                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_profile.html">
                     <div class="text-[#604e97] flex h-8 items-center justify-center">
@@ -159,7 +159,6 @@
                     <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
                 </a>
             </div>
-            <div class="h-5 bg-[#f9f8fc]"></div>
         </footer>
     </div>
     
