--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -126,21 +126,21 @@
         <!-- Fixed Bottom Navigation -->
         <footer class="fixed bottom-0 left-0 right-0 z-50 bg-[#f9f8fc] border-t border-[#eae7f3]">
             <div class="flex gap-2 px-4 pb-3 pt-2">
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_dashboard.html">
-                    <div class="text-[#604e97] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_dashboard.html">
+                    <div class="text-[#625095] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M224,115.55V208a16,16,0,0,1-16,16H168a16,16,0,0,1-16-16V168a8,8,0,0,0-8-8H112a8,8,0,0,0-8,8v40a16,16,0,0,1-16,16H48a16,16,0,0,1-16-16V115.55a16,16,0,0,1,5.17-11.78l80-75.48.11-.11a16,16,0,0,1,21.53,0,1.14,1.14,0,0,0,.11.11l80,75.48A16,16,0,0,1,224,115.55Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">Home</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Home</p>
                 </a>
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_riwayat_lunas.html">
-                    <div class="text-[#604e97] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_riwayat_lunas.html">
+                    <div class="text-[#625095] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M136,80v43.47l36.12,21.67a8,8,0,0,1-8.24,13.72l-40-24A8,8,0,0,1,120,128V80a8,8,0,0,1,16,0Zm-8-48A95.44,95.44,0,0,0,60.08,60.15C52.81,67.51,46.35,74.59,40,82V64a8,8,0,0,0-16,0v40a8,8,0,0,0,8,8H72a8,8,0,0,0,0-16H49c7.15-8.42,14.27-16.35,22.39-24.57a80,80,0,1,1,1.66,114.75,8,8,0,1,0-11,11.64A96,96,0,1,0,128,32Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#5324e0]" href="pelanggan_info.html">
                     <div class="text-[#5324e0] flex h-8 items-center justify-center">
@@ -150,13 +150,13 @@
                     </div>
                     <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
                 </a>
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_profile.html">
-                    <div class="text-[#604e97] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_profile.html">
+                    <div class="text-[#625095] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
                 </a>
             </div>
         </footer>
