--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,11 @@
             
             <div id="profile-view">
                 <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
-                    <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">My Profile</h2>
+                    <div id="back-btn" class="text-[#110e1b] flex size-12 shrink-0 items-center cursor-pointer -ml-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+                    </div>
+                    <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Edit Profile</h2>
+                    <div class="w-8"></div> 
                 </header>
 
                 <div class="flex p-4 @container">
@@ -35,13 +39,8 @@
 
                 <div class="px-4 mt-6 space-y-3">
                     <div id="edit-info-card" class="flex items-center gap-4 bg-white p-4 rounded-xl shadow-sm cursor-pointer border border-gray-200">
-                        <svg class="text-gray-500" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24ZM74.08,197.5a64,64,0,0,1,107.84,0,87.83,87.83,0,0,1-107.84,0ZM96,120a32,32,0,1,1,32,32A32,32,0,0,1,96,120Zm99.76,68.37a80,80,0,0,0-143.52,0,88,88,0,1,1,143.52,0Z"></path></svg>
-                        <span class="flex-1 text-base font-medium text-gray-800">My Information</span>
-                        <svg class="text-gray-400" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path></svg>
-                    </div>
-                    <div id="change-password-card" class="flex items-center gap-4 bg-white p-4 rounded-xl shadow-sm cursor-pointer border border-gray-200">
-                        <svg class="text-gray-500" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M208,80H176V56a48,48,0,0,0-96,0V80H48a16,16,0,0,0-16,16V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V96A16,16,0,0,0,208,80Zm-80,88a16,16,0,1,1,16-16A16,16,0,0,1,128,168Zm32-88H96V56a32,32,0,0,1,64,0Z"></path></svg>
-                        <span class="flex-1 text-base font-medium text-gray-800">Change Password</span>
+                        <svg class="text-gray-500" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M227.31,73.37,182.63,28.69a16,16,0,0,0-22.63,0L36.69,152A15.86,15.86,0,0,0,32,163.31V208a16,16,0,0,0,16,16H92.69A15.86,15.86,0,0,0,104,219.31L227.31,96A16,16,0,0,0,227.31,73.37ZM92.69,208H48V163.31l88-88L180.69,120ZM192,108.69,147.31,64l24-24L216,84.69Z"></path></svg>
+                        <span class="flex-1 text-base font-medium text-gray-800">Edit Informasi & Password</span>
                         <svg class="text-gray-400" xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256"><path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path></svg>
                     </div>
                 </div>
