--- a/profile.html
+++ b/profile.html
@@ -18,11 +18,13 @@
             
             <div id="profile-view">
                 <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
-                    <div id="back-btn" class="text-[#110e1b] flex size-12 shrink-0 items-center cursor-pointer -ml-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+                    <div class="w-12 flex justify-start">
+                        <!-- Placeholder untuk symmetry -->
                     </div>
-                    <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Edit Profile</h2>
-                    <div class="w-8"></div> 
+                    <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Profil</h2>
+                    <div class="w-12 flex justify-end">
+                        <!-- Placeholder untuk symmetry -->
+                    </div> 
                 </header>
 
                 <div class="flex p-4 @container">
@@ -54,10 +56,15 @@
 
             <div id="edit-view" class="hidden">
                 <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
-                    <div id="back-btn" class="text-[#110e1b] flex size-12 shrink-0 items-center cursor-pointer -ml-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+                    <div class="w-12 flex justify-start">
+                        <button id="edit-back-btn" class="text-[#110e1b] flex size-10 shrink-0 items-center justify-center cursor-pointer hover:bg-gray-100 rounded-full transition-colors">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+                        </button>
                     </div>
-                    <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Edit Profile</h2>
+                    <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Edit Profile</h2>
+                    <div class="w-12 flex justify-end">
+                        <!-- Placeholder untuk symmetry -->
+                    </div>
                 </header>
 
                 <div class="p-4 space-y-4">
