--- a/pelanggan.html
+++ b/pelanggan.html
@@ -92,7 +92,7 @@
                   <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
                 </svg>
               </button>
-              <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Customer Details</h2>
+              <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Detail Pelanggan</h2>
             </div>
             
             <!-- Customer Profile Section -->
@@ -163,7 +163,8 @@
             
             <!-- Unpaid Bills Section -->
             <div id="unpaid-bills-section" class="hidden">
-              <h2 class="text-[#110e1b] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Unpaid Bills</h2>
+              <h2 class="text-[#110e1b] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">
+Tagihan yang Belum Dibayar</h2>
               <div id="unpaid-bills-list">
                 <!-- Unpaid bills will be inserted here -->
               </div>
@@ -247,7 +248,7 @@
                     class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] focus:border-none h-14 p-4 text-base font-normal leading-normal"
                     required
                   >
-                    <option value="">Select Package</option>
+                    <option value="">Pilih Paket</option>
                     <option value="10 Mbps">10 Mbps</option>
                     <option value="20 Mbps">20 Mbps</option>
                     <option value="30 Mbps">30 Mbps</option>
