--- a/pelanggan.html
+++ b/pelanggan.html
@@ -63,11 +63,16 @@
 
         <div id="detail-view" class="hidden">
             <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
-              <div id="back-from-detail" class="text-[#110e1b] flex size-12 shrink-0 items-center cursor-pointer -ml-4">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+              <div class="w-12 flex justify-start">
+                  <button id="back-from-detail" class="text-[#110e1b] flex size-10 shrink-0 items-center justify-center cursor-pointer hover:bg-gray-100 rounded-full transition-colors">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+                  </button>
               </div>
               <h2 class="text-[#110e1b] text-lg font-bold flex-1 text-center">Detail Pelanggan</h2>
-              <div class="w-8"></div> </header>
+              <div class="w-12 flex justify-end">
+                  <!-- Placeholder untuk symmetry -->
+              </div>
+            </header>
             <div class="flex p-4"><div class="flex w-full flex-col gap-4 items-center"><div class="flex gap-4 flex-col items-center"><div id="detail-profile-image" class="bg-center bg-no-repeat aspect-square bg-cover rounded-full min-h-24 w-24 bg-gray-300"></div><div class="flex flex-col items-center justify-center"><p id="detail-customer-name" class="text-[#110e1b] text-[22px] font-bold text-center">-</p><p id="detail-customer-id" class="text-[#625095] text-base text-center">-</p></div></div></div></div>
             <div class="p-4 grid grid-cols-2 gap-0">
                 <div class="flex flex-col gap-1 border-t py-4 pr-2"><p class="text-[#625095] text-sm">IDPL</p><p id="detail-idpl" class="text-[#110e1b] text-sm">-</p></div>
@@ -88,11 +93,16 @@
 
         <div id="form-view" class="hidden">
             <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
-              <div id="back-from-form" class="text-[#110e1b] flex size-12 shrink-0 items-center cursor-pointer -ml-4">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+              <div class="w-12 flex justify-start">
+                  <button id="back-from-form" class="text-[#110e1b] flex size-10 shrink-0 items-center justify-center cursor-pointer hover:bg-gray-100 rounded-full transition-colors">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path></svg>
+                  </button>
               </div>
               <h2 id="modal-title" class="text-[#110e1b] text-lg font-bold flex-1 text-center">Tambah Pelanggan</h2>
-              <div class="w-8"></div> </header>
+              <div class="w-12 flex justify-end">
+                  <!-- Placeholder untuk symmetry -->
+              </div>
+            </header>
             <form id="customer-form" class="p-4">
               <div class="space-y-4">
                   <div><input id="customer-name" placeholder="Nama Lengkap" class="form-input w-full rounded-lg bg-[#eae8f3] h-14 p-4 text-base" required /></div>
