--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -36,6 +36,38 @@
                 <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Payment Info</h2>
             </div>
 
+            <!-- Payment Instructions Card -->
+            <div class="px-4 pb-4">
+                <div class="bg-gradient-to-r from-blue-50 to-indigo-50 border border-blue-200 rounded-xl p-5 mb-4 shadow-sm">
+                    <div class="flex items-start gap-3">
+                        <div class="flex-shrink-0 w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" viewBox="0 0 256 256" class="text-blue-600">
+                                <path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"></path>
+                            </svg>
+                        </div>
+                        <div class="flex-1">
+                            <h3 class="text-blue-900 font-semibold text-base mb-2">Cara Pembayaran</h3>
+                            <div class="text-blue-800 text-sm leading-relaxed space-y-2">
+                                <p>Silakan lakukan pembayaran ke salah satu rekening yang tertera di bawah ini, kemudian klik tombol <span class="font-medium text-blue-900">Konfirmasi Pembayaran</span>.</p>
+                                <div class="bg-white bg-opacity-60 rounded-lg p-3 mt-3 border border-blue-100">
+                                    <div class="flex items-start gap-2">
+                                        <div class="flex-shrink-0 w-5 h-5 bg-orange-100 rounded-full flex items-center justify-center mt-0.5">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="12px" height="12px" fill="currentColor" viewBox="0 0 256 256" class="text-orange-600">
+                                                <path d="M128,64a64,64,0,1,0,64,64A64.07,64.07,0,0,0,128,64Zm0,120a56,56,0,1,1,56-56A56.06,56.06,0,0,1,128,184ZM176,16H80A16,16,0,0,0,64,32V224a16,16,0,0,0,16,16h96a16,16,0,0,0,16-16V32A16,16,0,0,0,176,16Zm0,208H80V32h96V224Z"></path>
+                                            </svg>
+                                        </div>
+                                        <div class="text-sm">
+                                            <p class="font-medium text-gray-800 mb-1">Pembayaran Offline</p>
+                                            <p class="text-gray-700">Anda juga dapat melakukan pembayaran secara langsung di rumah <span class="font-medium">Bapak Karsadi dan Ibu Sopiyah</span>, beralamat di <span class="font-medium">Dukuh Sekiyong RT 04/RW 07, Desa Pamutih</span>.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Payment Cards -->
             <div class="px-4 pb-20">
                 <!-- SeaBank Card -->
