--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="text-center mb-8 fade-in">
           <div class="floating-animation">
             <div class="w-20 h-20 mx-auto mb-4 bg-white rounded-full flex items-center justify-center shadow-lg p-2">
-              <img src="assets/logo_192x192.png" alt="Selinggonet Logo" class="w-full h-full object-contain">
+              <img src="assets/sn-blue.png" alt="Selinggonet Logo" class="w-12 h-12 object-contain">
             </div>
           </div>
           <h1 class="text-3xl font-bold text-white mb-2">Selinggonet</h1>
